add language to screens

--- a/assets/lang/ar.json
+++ b/assets/lang/ar.json
@@ -2,6 +2,56 @@
   "Home": "الرئيسية",
   "Settings": "الإعدادات",
   "Settings Screen": "شاشة الإعدادات",
+  "Settings_Screen": "شاشة الإعدادات",
   "Dark Mode": "الوضع الداكن",
-  "Change Language:": "تغيير اللغة :"
+  "Dark_Mode": "الوضع الداكن",
+  "Change Language:": "تغيير اللغة :",
+  "Change_Language:": "تغيير اللغة :",
+  "auth_page_title": "صفحة تسجيل الدخول",
+  "user_hint": "اسم المستخدم",
+  "password_hint": "كلمة المرور",
+  "login_button": "تسجيل الدخول",
+  "new_user": "مستخدم جديد",
+  "user_not_found_error": "المستخدم غير موجود.",
+  "wrong_password_error": "كلمة المرور غير صحيحة.",
+  "general_error": "حدث خطأ. يرجى المحاولة مرة أخرى.",
+  "signup_page_title": "صفحة التسجيل",
+  "signup_button": "تسجيل",
+  "already_have_account": "لدي حساب بالفعل",
+  "empty_fields_error": "البريد الإلكتروني أو كلمة المرور لا يمكن أن تكون فارغة",
+  "weak_password_error": "كلمة المرور ضعيفة جدًا",
+  "email_in_use_error": "هذا البريد الإلكتروني مستخدم بالفعل",
+  "invalid_email_error": "تنسيق البريد الإلكتروني غير صالح",
+  "error_prefix": "خطأ:",
+  "welcome_title": "مرحبًا بك في لعبة الكويز",
+  "welcome_subtitle": "اكتشف اللعبة وخصائصها!",
+  "feature_quiz_game_title": "ما هي لعبة الكويز؟",
+  "feature_quiz_game_description": "اختبر معلوماتك في فئات مختلفة!",
+  "feature_categories_title": "اختيار الفئات",
+  "feature_categories_description": "اختر من بين العديد من فئات الكويز.",
+  "feature_difficulty_title": "مستويات الصعوبة",
+  "feature_difficulty_description": "العب بمستويات صعوبة مختلفة.",
+  "feature_timer_title": "المؤقت",
+  "feature_timer_description": "أجب ضمن الوقت المحدد لتحدي إضافي!",
+  "feature_score_title": "نظام النقاط",
+  "feature_score_description": "اطّلع على نقاطك وترتيبك.",
+  "start_game_button": "ابدأ اللعبة",
+  "home_title": "تطبيق الاختبار",
+  "guest_user": "ضيف",
+  "logout_tooltip": "تسجيل الخروج",
+  "num_questions_label": "عدد الأسئلة:",
+  "category_label": "الفئة:",
+  "difficulty_label": "الصعوبة:",
+  "select_tab_label": "اختر علامة تبويب.",
+  "home_tab": "الرئيسية",
+  "scores_tab": "النتائج",
+  "settings_tab": "الإعدادات",
+  "score_update_success": "تم تحديث النتيجة بنجاح!",
+  "score_update_failed": "فشل تحديث النتيجة: {0}",
+  "Enable Sounds": "تمكين الأصوات",
+  "Enable_Sounds": "تمكين الأصوات",
+  "Change Language": "تغيير اللغة",
+  "English": "الإنجليزية",
+  "Français": "الفرنسية",
+  "العربية": "العربية"
 }
