--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -3,5 +3,53 @@
   "Settings": "Settings",
   "Settings Screen": "Settings Screen",
   "Dark Mode": "Dark Mode",
-  "Change Language:": "Change Language:"
+  "Change Language:": "Change Language:",
+  "auth_page_title": "Authentication Page",
+  "user_hint": "Username",
+  "password_hint": "Password",
+  "login_button": "Login",
+  "new_user": "New User",
+  "user_not_found_error": "User not found.",
+  "wrong_password_error": "Incorrect password.",
+  "general_error": "An error occurred. Please try again.",
+  "signup_page_title": "Sign Up Page",  
+  "signup_button": "Sign Up",
+  "already_have_account": "I already have an account",
+  "empty_fields_error": "Email or password cannot be empty",
+  "weak_password_error": "Password is too weak",
+  "email_in_use_error": "This email is already in use",
+  "invalid_email_error": "Invalid email format",
+  "error_prefix": "Error:",
+  "welcome_title": "Welcome to the Quiz Game",
+  "welcome_subtitle": "Discover the game and its features!",
+  "feature_quiz_game_title": "What is the Quiz Game?",
+  "feature_quiz_game_description": "Test your knowledge in different categories!",
+  "feature_categories_title": "Category Selection",
+  "feature_categories_description": "Choose from a variety of quiz categories.",
+  "feature_difficulty_title": "Difficulty Levels",
+  "feature_difficulty_description": "Play with different levels of difficulty.",
+  "feature_timer_title": "Timer",
+  "feature_timer_description": "Answer within the given time for more challenge!",
+  "feature_score_title": "Score System",
+  "feature_score_description": "Access your scores and rankings.",
+  "start_game_button": "Start the Game",
+  "home_title": "Quiz App",
+  "guest_user": "Guest",
+  "logout_tooltip": "Log out",
+  "num_questions_label": "Number of Questions:",
+  "category_label": "Category:",
+  "difficulty_label": "Difficulty:",
+  "select_tab_label": "Select a tab.",
+  "home_tab": "Home",
+  "scores_tab": "Scores",
+  "settings_tab": "Settings",
+  "score_update_success": "Score updated successfully!",
+  "score_update_failed": "Failed to update score: {0}",
+  "Enable Sounds": "Enable Sounds",
+  "Change Language": "Change Language",
+  "English": "English",
+  "Français": "Français",
+  "العربية": "Arabic"
+  
+
 }
