--- a/assets/lang/fr.json
+++ b/assets/lang/fr.json
@@ -3,5 +3,52 @@
   "Settings": "Paramètres",
   "Settings Screen": "Écran des paramètres",
   "Dark Mode": "Mode sombre",
-  "Change Language:": "Changer la langue :"
+  "Change Language:": "Changer la langue :",
+  "auth_page_title": "Page d'authentification",
+  "user_hint": "Nom d'utilisateur",
+  "password_hint": "Mot de passe",
+  "login_button": "Connexion",
+  "new_user": "Nouvel utilisateur",
+  "user_not_found_error": "Utilisateur non trouvé.",
+  "wrong_password_error": "Mot de passe incorrect.",
+  "general_error": "Une erreur est survenue. Veuillez réessayer.",
+  "signup_page_title": "Page d'inscription",
+  "signup_button": "Inscription",
+  "already_have_account": "J'ai déjà un compte",
+  "empty_fields_error": "Email ou mot de passe vides",
+  "weak_password_error": "Mot de passe trop faible",
+  "email_in_use_error": "Cet email est déjà utilisé",
+  "invalid_email_error": "Format de l'email invalide",
+  "error_prefix": "Erreur:",
+  "welcome_title": "Bienvenue dans le Quiz Game",
+  "welcome_subtitle": "Découvrez le jeu et ses caractéristiques!",
+  "feature_quiz_game_title": "Qu'est-ce que le Quiz Game?",
+  "feature_quiz_game_description": "Testez vos connaissances dans différentes catégories!",
+  "feature_categories_title": "Choix des catégories",
+  "feature_categories_description": "Sélectionnez parmi de nombreuses catégories de quiz.",
+  "feature_difficulty_title": "Niveaux de difficulté",
+  "feature_difficulty_description": "Jouez avec différents niveaux de difficulté.",
+  "feature_timer_title": "Chronomètre",
+  "feature_timer_description": "Répondez dans le temps imparti pour plus de challenge!",
+  "feature_score_title": "Système de Score",
+  "feature_score_description": "Accédez à vos scores et classements.",
+  "start_game_button": "Commencer le jeu",
+  "home_title": "Application Quiz",
+  "guest_user": "Invité",
+  "logout_tooltip": "Se déconnecter",
+  "num_questions_label": "Nombre de questions :",
+  "category_label": "Catégorie :",
+  "difficulty_label": "Difficulté :",
+  "select_tab_label": "Sélectionnez un onglet.",
+  "home_tab": "Accueil",
+  "scores_tab": "Scores",
+  "settings_tab": "Paramètres",
+  "score_update_success": "Score mis à jour avec succès !",
+  "score_update_failed": "Échec de la mise à jour du score : {0}",
+  "Change Language": "Changer la Langue",
+  "Enable Sounds": "Activer les Sons",
+  "English": "Anglais",
+  "Français": "Français",
+  "العربية": "Arabe"
+
 }
